<resources>
    <string name="app_name">To-Do App</string>

    <string name="label_add_note">Add New Note</string>
    <string name="label_no_data">No Data</string>

    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_list_fragment_title">ToDo - All Items</string>
    <string name="label_add_fragment_title">"ToDo - Add New Note"</string>
    <string name="label_update_fragment_title">ToDo - Update Note</string>

    <string-array name="array_priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string name="label_search">Search</string>
    <string name="label_sort_by">Sort By</string>
    <string name="label_priority_high">Priority High</string>
    <string name="label_priority_low">Priority Low</string>
    <string name="label_delete_all">Delete All</string>
    <string name="label_add">Add</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
</resources>