<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/label_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/> <!--
                                                                        Bind a button
                                                                        with a custom
                                                                        widget.
                                                                      -->

    <!-- TODO: Remove RADIO BUTTON option from menu-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/label_sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/label_priority_high"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/label_priority_low"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/label_delete_all"
        app:showAsAction="never"/>

</menu>